# simple_spreedsheet

./: CMakeLists.txt  Cell.cpp  Cell.h  Formula.h  MaxCalculator.cpp  MaxCalculator.h  MaxFormula.cpp  MaxFormula.h  MeanCalculator.cpp  MeanCalculator.h  MeanFormula.cpp  MeanFormula.h  MinCalculator.cpp  MinCalculator.h  MinFormula.cpp  MinFormula.h  Observer.h  Spreadsheet.cpp  Spreadsheet.h  Subject.h  SumCalculator.cpp  SumCalculator.h  SumFormula.cpp  SumFormula.h  main.cpp  main.h
Google_tests/: CMakeLists.txt  CellTest.cpp  FormulaTest.cpp  TestSpreasheet.cpp  runAllTests.cpp
